--- a/data.html
+++ b/data.html
@@ -166,7 +166,9 @@
             href="https://github.com/cmudig/draco2/issues/new?title=Issue%20on%20page%20%2Fdata.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
-        
+        <a class="edit-button" href="https://github.com/cmudig/draco2/edit/main/docs/data.ipynb"><button
+                type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
+                title="Edit this page"><i class="fas fa-pencil-alt"></i>suggest edit</button></a>
     </div>
 </div>
 
@@ -184,7 +186,7 @@
         aria-label="Launch interactive content"><i class="fas fa-rocket"></i></button>
     <div class="dropdown-buttons">
         
-        <a class="binder-button" href="https://mybinder.org/v2/gh/cmudig/draco2/main?urlpath=tree/docs/data.ipynb"><button type="button"
+        <a class="binder-button" href="https://mybinder.org/v2/gh/cmudig/draco2/main?urlpath=lab/tree/docs/data.ipynb"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Launch Binder" data-toggle="tooltip"
                 data-placement="left"><img class="binder-button-logo"
                     src="_static/images/logo_binder.svg"
