deploy: 60548a891ed247c81bcfa5f33d54614d72f08958

--- a/facts/schema.html
+++ b/facts/schema.html
@@ -269,6 +269,14 @@
 </dd>
 <dt><code class="docutils literal notranslate"><span class="pre">unique</span></code></dt><dd><p>The number of unique values.</p>
 </dd>
+<dt><code class="docutils literal notranslate"><span class="pre">min</span></code></dt><dd><p>The minimum value. Only used for numbers.</p>
+</dd>
+<dt><code class="docutils literal notranslate"><span class="pre">max</span></code></dt><dd><p>The maximum value. Only used for numbers.</p>
+</dd>
+<dt><code class="docutils literal notranslate"><span class="pre">std</span></code></dt><dd><p>The standard deviation. Only used for numbers.</p>
+</dd>
+<dt><code class="docutils literal notranslate"><span class="pre">freq</span></code></dt><dd><p>The frequency of the most common value. Only used for strings.</p>
+</dd>
 </dl>
 </div>
 </div>
