--- a/bibliography.html
+++ b/bibliography.html
@@ -253,6 +253,12 @@
 <dt class="label" id="id2"><span class="brackets">MWN+18</span></dt>
 <dd><p>Dominik Moritz, Chenglong Wang, Greg L Nelson, Halden Lin, Adam M Smith, Bill Howe, and Jeffrey Heer. Formalizing visualization design knowledge as constraints: actionable and extensible models in draco. <em>IEEE transactions on visualization and computer graphics</em>, 2018.</p>
 </dd>
+<dt class="label" id="id3"><span class="brackets">SMWH16</span></dt>
+<dd><p>Arvind Satyanarayan, Dominik Moritz, Kanit Wongsuphasawat, and Jeffrey Heer. Vega-lite: a grammar of interactive graphics. <em>IEEE transactions on visualization and computer graphics</em>, 2016.</p>
+</dd>
+<dt class="label" id="id5"><span class="brackets">Wil12</span></dt>
+<dd><p>Leland Wilkinson. The grammar of graphics. In <em>Handbook of computational statistics</em>, pages 375–414. Springer, 2012.</p>
+</dd>
 </dl>
 </p>
 </div>
