deploy: 7dac4651f5240529652dc7ed54077b27f0fe4f7b

--- a/genindex.html
+++ b/genindex.html
@@ -267,6 +267,7 @@
  | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -395,6 +396,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/facts.html#draco.fact_utils.make_fact">make_fact() (in module draco.fact_utils)</a>
 </li>
+      <li><a href="api/run.html#draco.run.Observer.minimize">minimize() (draco.run.Observer method)</a>
+</li>
       <li><a href="api/run.html#draco.run.Model">Model (class in draco.run)</a>
 </li>
       <li>
@@ -410,6 +413,14 @@
         <li><a href="api/spec.html#module-draco.spec">draco.spec</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/run.html#draco.run.Observer">Observer (class in draco.run)</a>
+</li>
   </ul></td>
 </tr></table>
 
