--- a/guide.html
+++ b/guide.html
@@ -476,7 +476,7 @@ If you write your own despription language, you need to set up the search space 
            &#39;scale&#39;: [{&#39;channel&#39;: &#39;shape&#39;, &#39;type&#39;: &#39;categorical&#39;},
                      {&#39;channel&#39;: &#39;size&#39;, &#39;type&#39;: &#39;categorical&#39;}]}]}
 [attribute(number_rows,root,100), attribute((field,name),(f,0),temperature), attribute((field,type),(f,0),number), attribute((field,name),(f,1),precipitation), attribute((field,type),(f,1),number), attribute((encoding,field),(e,0),(f,0)), attribute((encoding,field),(e,1),(f,1)), attribute(task,root,value), attribute((scale,type),(s,1),categorical), attribute((scale,type),(s,0),categorical), attribute((encoding,channel),(e,1),size), attribute((encoding,channel),(e,0),shape), attribute((mark,type),(m,0),rect), attribute((scale,channel),(s,1),size), attribute((scale,channel),(s,0),shape), attribute((mark,channel),(m,0),size), attribute((mark,channel),(m,0),shape), attribute((mark,scale),(m,0),(s,0)), attribute((mark,scale),(m,0),(s,1)), attribute((encoding,scale_type),(e,0),categorical), attribute((encoding,scale_type),(e,1),categorical), attribute(mark_channel_discrete_or_binned,(m,0),size), attribute(mark_channel_discrete_or_binned,(m,0),shape), entity(field,root,(f,0)), entity(field,root,(f,1)), entity(view,root,(v,0)), entity(mark,(v,0),(m,0)), entity(encoding,(m,0),(e,0)), entity(encoding,(m,0),(e,1)), entity(scale,(v,0),(s,0)), entity(scale,(v,0),(s,1))]
-[&#39;size_without_point_text&#39;, &#39;shape_without_point&#39;, &#39;categorical_not_color&#39;]
+[&#39;size_without_point_text&#39;, &#39;shape_without_point&#39;, &#39;categorical_not_color&#39;, &#39;shape_not_ordinal&#39;]
 </pre></div>
 </div>
 </div>
