--- a/guide.html
+++ b/guide.html
@@ -545,18 +545,35 @@ If you write your own despription language, you need to set up the search space 
  &#39;number_rows&#39;: 100,
  &#39;task&#39;: &#39;value&#39;,
  &#39;view&#39;: [{&#39;mark&#39;: [{&#39;channel&#39;: &#39;text&#39;,
-                     &#39;encoding&#39;: [{&#39;channel&#39;: &#39;text&#39;,
+                     &#39;encoding&#39;: [{&#39;aggregate&#39;: &#39;stdev&#39;,
+                                   &#39;channel&#39;: &#39;color&#39;,
                                    &#39;field&#39;: (&#39;f&#39;, 0),
-                                   &#39;scale_type&#39;: &#39;linear&#39;},
-                                  {&#39;channel&#39;: &#39;size&#39;,
+                                   &#39;scale_type&#39;: &#39;linear&#39;,
+                                   &#39;type&#39;: &#39;linear&#39;},
+                                  {&#39;aggregate&#39;: &#39;stdev&#39;,
+                                   &#39;channel&#39;: &#39;text&#39;,
                                    &#39;field&#39;: (&#39;f&#39;, 1),
-                                   &#39;scale_type&#39;: &#39;linear&#39;}],
+                                   &#39;scale_type&#39;: &#39;linear&#39;,
+                                   &#39;type&#39;: &#39;linear&#39;}],
+                     &#39;mark_channel_cont&#39;: &#39;text&#39;,
                      &#39;mark_encoding_cont&#39;: (&#39;e&#39;, 1),
-                     &#39;scale&#39;: (&#39;s&#39;, 1),
-                     &#39;type&#39;: &#39;text&#39;}],
-           &#39;scale&#39;: [{&#39;channel&#39;: &#39;text&#39;, &#39;type&#39;: &#39;linear&#39;},
-                     {&#39;channel&#39;: &#39;size&#39;, &#39;type&#39;: &#39;linear&#39;}]}]}
-[attribute(number_rows,root,100), attribute((field,name),(f,0),temperature), attribute((field,type),(f,0),number), attribute((field,name),(f,1),precipitation), attribute((field,type),(f,1),number), attribute((encoding,field),(e,0),(f,0)), attribute((encoding,field),(e,1),(f,1)), attribute(task,root,value), attribute((scale,type),(s,1),linear), attribute((scale,type),(s,0),linear), attribute((encoding,channel),(e,1),size), attribute((encoding,channel),(e,0),text), attribute((mark,type),(m,0),text), attribute((scale,channel),(s,1),size), attribute((scale,channel),(s,0),text), attribute((mark,channel),(m,0),size), attribute((mark,channel),(m,0),text), attribute((mark,scale),(m,0),(s,0)), attribute((mark,scale),(m,0),(s,1)), attribute((encoding,scale_type),(e,0),linear), attribute((encoding,scale_type),(e,1),linear), attribute(mark_encoding_cont,(m,0),(e,0)), attribute(mark_encoding_cont,(m,0),(e,1)), entity(field,root,(f,0)), entity(field,root,(f,1)), entity(view,root,(v,0)), entity(mark,(v,0),(m,0)), entity(encoding,(m,0),(e,0)), entity(encoding,(m,0),(e,1)), entity(scale,(v,0),(s,0)), entity(scale,(v,0),(s,1))]
+                     &#39;scale&#39;: (&#39;e&#39;, 0),
+                     &#39;type&#39;: &#39;text&#39;,
+                     &#39;x_cardinality&#39;: 1,
+                     &#39;y_cardinality&#39;: 1}],
+           &#39;scale&#39;: [{&#39;type&#39;: &#39;linear&#39;},
+                     {&#39;type&#39;: &#39;linear&#39;},
+                     {&#39;aggregate&#39;: &#39;stdev&#39;,
+                      &#39;channel&#39;: &#39;text&#39;,
+                      &#39;field&#39;: (&#39;f&#39;, 1),
+                      &#39;scale_type&#39;: &#39;linear&#39;,
+                      &#39;type&#39;: &#39;linear&#39;},
+                     {&#39;aggregate&#39;: &#39;stdev&#39;,
+                      &#39;channel&#39;: &#39;color&#39;,
+                      &#39;field&#39;: (&#39;f&#39;, 0),
+                      &#39;scale_type&#39;: &#39;linear&#39;,
+                      &#39;type&#39;: &#39;linear&#39;}]}]}
+[attribute(number_rows,root,100), attribute((field,name),(f,0),temperature), attribute((field,type),(f,0),number), attribute((field,name),(f,1),precipitation), attribute((field,type),(f,1),number), attribute((encoding,field),(e,0),(f,0)), attribute((encoding,field),(e,1),(f,1)), attribute(task,root,value), attribute((encoding,aggregate),(e,1),stdev), attribute((encoding,aggregate),(e,0),stdev), attribute((scale,type),(s,1),linear), attribute((scale,type),(s,0),linear), attribute((encoding,channel),(e,1),text), attribute((encoding,channel),(e,0),color), attribute((mark,type),(m,0),text), attribute((scale,type),(e,0),linear), attribute((scale,type),(e,1),linear), attribute((scale,channel),(e,1),text), attribute((scale,channel),(e,0),color), attribute((mark,channel),(m,0),color), attribute((mark,channel),(m,0),text), attribute((mark,scale),(m,0),(s,0)), attribute((mark,scale),(m,0),(s,1)), attribute((mark,scale),(m,0),(e,1)), attribute((mark,scale),(m,0),(e,0)), attribute((encoding,scale_type),(e,0),linear), attribute((encoding,scale_type),(e,1),linear), attribute(mark_encoding_cont,(m,0),(e,0)), attribute(mark_encoding_cont,(m,0),(e,1)), attribute(mark_channel_cont,(m,0),color), attribute(mark_channel_cont,(m,0),text), attribute(x_cardinality,(m,0),1), attribute(y_cardinality,(m,0),1), entity(field,root,(f,0)), entity(field,root,(f,1)), entity(view,root,(v,0)), entity(mark,(v,0),(m,0)), entity(encoding,(m,0),(e,0)), entity(encoding,(m,0),(e,1)), entity(scale,(v,0),(s,0)), entity(scale,(v,0),(s,1)), entity(scale,(v,0),(e,1)), entity(scale,(v,0),(e,0))]
 </pre></div>
 </div>
 </div>
