deploy: fd60a166c505d3ab02197e6c4f1ac4ac43c722e6

--- a/genindex.html
+++ b/genindex.html
@@ -408,7 +408,15 @@ title="Open an issue"
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/draco.html#draco.Draco.check_spec">check_spec() (draco.Draco method)</a>
+</li>
       <li><a href="api/facts.html#draco.fact_utils.collect_children">collect_children() (in module draco.fact_utils)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/draco.html#draco.Draco.complete_spec">complete_spec() (draco.Draco method)</a>
+</li>
+      <li><a href="api/draco.html#draco.Draco.count_preferences">count_preferences() (draco.Draco method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -451,6 +459,10 @@ title="Open an issue"
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/facts.html#draco.fact_utils.get_value">get_value() (in module draco.fact_utils)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/draco.html#draco.Draco.get_violations">get_violations() (draco.Draco method)</a>
 </li>
   </ul></td>
 </tr></table>
