deploy: a3d5d2f08b612fca29b6ccd9535e1a0d65acbc28

--- a/applications/recommendation.html
+++ b/applications/recommendation.html
@@ -629,13 +629,13 @@ OUTPUT:
 </pre></div>
 </div>
 <div class="output text_html">
-<div id="altair-viz-d8b72d0a91e5462aa84cb45afb593a68"></div>
+<div id="altair-viz-2ea74f01ae5b4a3fb1e3987b10437eab"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-d8b72d0a91e5462aa84cb45afb593a68") {
-      outputDiv = document.getElementById("altair-viz-d8b72d0a91e5462aa84cb45afb593a68");
+    if (outputDiv.id !== "altair-viz-2ea74f01ae5b4a3fb1e3987b10437eab") {
+      outputDiv = document.getElementById("altair-viz-2ea74f01ae5b4a3fb1e3987b10437eab");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -761,13 +761,13 @@ OUTPUT:
 </pre></div>
 </div>
 <div class="output text_html">
-<div id="altair-viz-227d9f76ef954457a48a4227329704f6"></div>
+<div id="altair-viz-8693f3c38d0f4c788c1cf0a475ae65b1"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-227d9f76ef954457a48a4227329704f6") {
-      outputDiv = document.getElementById("altair-viz-227d9f76ef954457a48a4227329704f6");
+    if (outputDiv.id !== "altair-viz-8693f3c38d0f4c788c1cf0a475ae65b1") {
+      outputDiv = document.getElementById("altair-viz-8693f3c38d0f4c788c1cf0a475ae65b1");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -843,7 +843,7 @@ defaultdict(&lt;class &#39;int&#39;&gt;,
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./applications"
         },
         predefinedOutput: true
