--- a/applications/renderer.html
+++ b/applications/renderer.html
@@ -711,13 +711,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-2fd5822c06d248358189eaef9a0bb053"></div>
+<div id="altair-viz-3cdbfb46769c456c8eb8e7ada443c224"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-2fd5822c06d248358189eaef9a0bb053") {
-      outputDiv = document.getElementById("altair-viz-2fd5822c06d248358189eaef9a0bb053");
+    if (outputDiv.id !== "altair-viz-3cdbfb46769c456c8eb8e7ada443c224") {
+      outputDiv = document.getElementById("altair-viz-3cdbfb46769c456c8eb8e7ada443c224");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -789,13 +789,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-963512477de0407b92bd4006f27a16bd"></div>
+<div id="altair-viz-ed9bb4a736344ac88217c3025c47029f"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-963512477de0407b92bd4006f27a16bd") {
-      outputDiv = document.getElementById("altair-viz-963512477de0407b92bd4006f27a16bd");
+    if (outputDiv.id !== "altair-viz-ed9bb4a736344ac88217c3025c47029f") {
+      outputDiv = document.getElementById("altair-viz-ed9bb4a736344ac88217c3025c47029f");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -868,7 +868,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./applications"
         },
         predefinedOutput: true
