--- a/applications/server.html
+++ b/applications/server.html
@@ -830,7 +830,7 @@ you can always take a look at the capabilities of the underlying <a class="refer
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./applications"
         },
         predefinedOutput: true
