--- a/facts/encoding.html
+++ b/facts/encoding.html
@@ -580,7 +580,7 @@ examples, they can be different.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./facts"
         },
         predefinedOutput: true
