--- a/facts/examples.html
+++ b/facts/examples.html
@@ -876,13 +876,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-efcdb53055bd434da2dbf738a68d5b69"></div>
+<div id="altair-viz-f832d4bdc2e04a2e99f4dee019ac319b"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-efcdb53055bd434da2dbf738a68d5b69") {
-      outputDiv = document.getElementById("altair-viz-efcdb53055bd434da2dbf738a68d5b69");
+    if (outputDiv.id !== "altair-viz-f832d4bdc2e04a2e99f4dee019ac319b") {
+      outputDiv = document.getElementById("altair-viz-f832d4bdc2e04a2e99f4dee019ac319b");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -973,13 +973,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-2a949e56dadc46cd99f08e005e743fef"></div>
+<div id="altair-viz-dbf75d12a8cc4a8cb6be4d2a96e2e14f"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-2a949e56dadc46cd99f08e005e743fef") {
-      outputDiv = document.getElementById("altair-viz-2a949e56dadc46cd99f08e005e743fef");
+    if (outputDiv.id !== "altair-viz-dbf75d12a8cc4a8cb6be4d2a96e2e14f") {
+      outputDiv = document.getElementById("altair-viz-dbf75d12a8cc4a8cb6be4d2a96e2e14f");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -1080,13 +1080,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-b177dd3e750a4fd785337f9fa6bb4d07"></div>
+<div id="altair-viz-bab40cfabbe841ba8bf8b862cbdea79d"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-b177dd3e750a4fd785337f9fa6bb4d07") {
-      outputDiv = document.getElementById("altair-viz-b177dd3e750a4fd785337f9fa6bb4d07");
+    if (outputDiv.id !== "altair-viz-bab40cfabbe841ba8bf8b862cbdea79d") {
+      outputDiv = document.getElementById("altair-viz-bab40cfabbe841ba8bf8b862cbdea79d");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -1199,13 +1199,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-bf7efce4101b4852aa549cd71bf49720"></div>
+<div id="altair-viz-f39894fedb184dc0bf176fbbc80003ab"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-bf7efce4101b4852aa549cd71bf49720") {
-      outputDiv = document.getElementById("altair-viz-bf7efce4101b4852aa549cd71bf49720");
+    if (outputDiv.id !== "altair-viz-f39894fedb184dc0bf176fbbc80003ab") {
+      outputDiv = document.getElementById("altair-viz-f39894fedb184dc0bf176fbbc80003ab");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -1313,13 +1313,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-4b63f109971c436baf873a9dd12759a7"></div>
+<div id="altair-viz-89e9e6fae9d9400d8cc337f01a7523ac"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-4b63f109971c436baf873a9dd12759a7") {
-      outputDiv = document.getElementById("altair-viz-4b63f109971c436baf873a9dd12759a7");
+    if (outputDiv.id !== "altair-viz-89e9e6fae9d9400d8cc337f01a7523ac") {
+      outputDiv = document.getElementById("altair-viz-89e9e6fae9d9400d8cc337f01a7523ac");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -1425,13 +1425,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-c1f90049160b49e3ba33d0e99f498430"></div>
+<div id="altair-viz-0d8d3ca2b984421cb75698ae0a42a419"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-c1f90049160b49e3ba33d0e99f498430") {
-      outputDiv = document.getElementById("altair-viz-c1f90049160b49e3ba33d0e99f498430");
+    if (outputDiv.id !== "altair-viz-0d8d3ca2b984421cb75698ae0a42a419") {
+      outputDiv = document.getElementById("altair-viz-0d8d3ca2b984421cb75698ae0a42a419");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -1535,13 +1535,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-707b18aa62f1466aba917e80255dc4a6"></div>
+<div id="altair-viz-ea3e91a13d984655bfae5e55414e11d1"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-707b18aa62f1466aba917e80255dc4a6") {
-      outputDiv = document.getElementById("altair-viz-707b18aa62f1466aba917e80255dc4a6");
+    if (outputDiv.id !== "altair-viz-ea3e91a13d984655bfae5e55414e11d1") {
+      outputDiv = document.getElementById("altair-viz-ea3e91a13d984655bfae5e55414e11d1");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -1648,13 +1648,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-16783b048cb34b3d9bc0bbd214614dd3"></div>
+<div id="altair-viz-d502133b27f74b53adb0d8013a750c95"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-16783b048cb34b3d9bc0bbd214614dd3") {
-      outputDiv = document.getElementById("altair-viz-16783b048cb34b3d9bc0bbd214614dd3");
+    if (outputDiv.id !== "altair-viz-d502133b27f74b53adb0d8013a750c95") {
+      outputDiv = document.getElementById("altair-viz-d502133b27f74b53adb0d8013a750c95");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -1770,13 +1770,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-95ceebe075a747318ea842d2f5b60e11"></div>
+<div id="altair-viz-61631cef30774654b7dd7b9c02352163"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-95ceebe075a747318ea842d2f5b60e11") {
-      outputDiv = document.getElementById("altair-viz-95ceebe075a747318ea842d2f5b60e11");
+    if (outputDiv.id !== "altair-viz-61631cef30774654b7dd7b9c02352163") {
+      outputDiv = document.getElementById("altair-viz-61631cef30774654b7dd7b9c02352163");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -1898,13 +1898,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-fa5a2a351ee4428a9a0e86af6115f749"></div>
+<div id="altair-viz-0486564216d34b4889bfd3ba7dd2fd5b"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-fa5a2a351ee4428a9a0e86af6115f749") {
-      outputDiv = document.getElementById("altair-viz-fa5a2a351ee4428a9a0e86af6115f749");
+    if (outputDiv.id !== "altair-viz-0486564216d34b4889bfd3ba7dd2fd5b") {
+      outputDiv = document.getElementById("altair-viz-0486564216d34b4889bfd3ba7dd2fd5b");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -2017,13 +2017,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-b6210c1b847b4f368dda6b7970f4dec0"></div>
+<div id="altair-viz-7e31d521b3e840a08f49e557260ffd76"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-b6210c1b847b4f368dda6b7970f4dec0") {
-      outputDiv = document.getElementById("altair-viz-b6210c1b847b4f368dda6b7970f4dec0");
+    if (outputDiv.id !== "altair-viz-7e31d521b3e840a08f49e557260ffd76") {
+      outputDiv = document.getElementById("altair-viz-7e31d521b3e840a08f49e557260ffd76");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -2143,13 +2143,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-e99b50995a864bf78dd846923dbe0513"></div>
+<div id="altair-viz-cafc6bee393349c98ce778f1991c6aae"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-e99b50995a864bf78dd846923dbe0513") {
-      outputDiv = document.getElementById("altair-viz-e99b50995a864bf78dd846923dbe0513");
+    if (outputDiv.id !== "altair-viz-cafc6bee393349c98ce778f1991c6aae") {
+      outputDiv = document.getElementById("altair-viz-cafc6bee393349c98ce778f1991c6aae");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -2270,13 +2270,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-50eb20f0ff964d48ab711c7c2e8fa217"></div>
+<div id="altair-viz-9ca8f84264144f58aa190b30d4e36443"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-50eb20f0ff964d48ab711c7c2e8fa217") {
-      outputDiv = document.getElementById("altair-viz-50eb20f0ff964d48ab711c7c2e8fa217");
+    if (outputDiv.id !== "altair-viz-9ca8f84264144f58aa190b30d4e36443") {
+      outputDiv = document.getElementById("altair-viz-9ca8f84264144f58aa190b30d4e36443");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -2386,13 +2386,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-ad52046511be4bbda2c38687ef147ab1"></div>
+<div id="altair-viz-d567027c6fcb4bfc9f17a578db7fa0c3"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-ad52046511be4bbda2c38687ef147ab1") {
-      outputDiv = document.getElementById("altair-viz-ad52046511be4bbda2c38687ef147ab1");
+    if (outputDiv.id !== "altair-viz-d567027c6fcb4bfc9f17a578db7fa0c3") {
+      outputDiv = document.getElementById("altair-viz-d567027c6fcb4bfc9f17a578db7fa0c3");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -2506,13 +2506,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-08285d87b08c473db75263f26144e62a"></div>
+<div id="altair-viz-2dd238abf5cf4d09aeecd1d2fdf5dbee"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-08285d87b08c473db75263f26144e62a") {
-      outputDiv = document.getElementById("altair-viz-08285d87b08c473db75263f26144e62a");
+    if (outputDiv.id !== "altair-viz-2dd238abf5cf4d09aeecd1d2fdf5dbee") {
+      outputDiv = document.getElementById("altair-viz-2dd238abf5cf4d09aeecd1d2fdf5dbee");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -2637,13 +2637,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-536056abe1744e7fa61379f44fd585e1"></div>
+<div id="altair-viz-20d2d6225e2f42f0b9d979310c58a780"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-536056abe1744e7fa61379f44fd585e1") {
-      outputDiv = document.getElementById("altair-viz-536056abe1744e7fa61379f44fd585e1");
+    if (outputDiv.id !== "altair-viz-20d2d6225e2f42f0b9d979310c58a780") {
+      outputDiv = document.getElementById("altair-viz-20d2d6225e2f42f0b9d979310c58a780");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -2769,13 +2769,13 @@ title="Print to PDF"
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html">
-<div id="altair-viz-fce1ea4cdddc403aa7aea927726e8956"></div>
+<div id="altair-viz-62f74141cb3d4ac49e43c90e83fc173d"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-fce1ea4cdddc403aa7aea927726e8956") {
-      outputDiv = document.getElementById("altair-viz-fce1ea4cdddc403aa7aea927726e8956");
+    if (outputDiv.id !== "altair-viz-62f74141cb3d4ac49e43c90e83fc173d") {
+      outputDiv = document.getElementById("altair-viz-62f74141cb3d4ac49e43c90e83fc173d");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -2872,7 +2872,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./facts"
         },
         predefinedOutput: true
