--- a/facts/intro.html
+++ b/facts/intro.html
@@ -588,7 +588,7 @@ extensible and you can add whatever other properties you care about to Draco.</p
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./facts"
         },
         predefinedOutput: true
