--- a/facts/mark.html
+++ b/facts/mark.html
@@ -548,7 +548,7 @@ chart).</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./facts"
         },
         predefinedOutput: true
