--- a/facts/task.html
+++ b/facts/task.html
@@ -542,7 +542,7 @@ comparing aggregate properties. When the task regards specific fields, fields ca
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./facts"
         },
         predefinedOutput: true
