--- a/guide.html
+++ b/guide.html
@@ -648,7 +648,7 @@ If you write your own description language, you need to set up the search space 
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./."
         },
         predefinedOutput: true
