--- a/facts/facet.html
+++ b/facts/facet.html
@@ -563,7 +563,7 @@ Although we specify the name and the id in the same way in the following example
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./facts"
         },
         predefinedOutput: true
