--- a/facts/scale.html
+++ b/facts/scale.html
@@ -550,7 +550,7 @@ color scales can either be <code class="docutils literal notranslate"><span clas
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./facts"
         },
         predefinedOutput: true
