--- a/facts/schema.html
+++ b/facts/schema.html
@@ -596,7 +596,7 @@ task.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./facts"
         },
         predefinedOutput: true
