--- a/intro.html
+++ b/intro.html
@@ -543,7 +543,7 @@ a prerelease.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./."
         },
         predefinedOutput: true
